# fastapi_pj

./: .gitignore  customexception.py  data.py  main.py  models.py  pyproject.toml  queries.py  security.py
fastapi_pj/: customexception.py  data.py  main.py  models.py  security.py  sql_app.db  utils.py
fastapi_pj/sql_module/: crud.py  database.py  models.py  schemas.py  sqlrouter.py
