[tool.poetry]
name = "fastapi_pj"
version = "0.1.0"
description = ""
authors = ["Ruslan"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = {extras = ["standart"], version = "^0.16.0"}
pydantic = {extras = ["email"], version = "^1.8.2"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
