[tool.poetry]
name = "fastapi_pj"
version = "0.1.0"
description = ""
authors = ["Ruslan"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = {extras = ["standart"], version = "^0.16.0"}
pydantic = {extras = ["email"], version = "^1.8.2"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
